--- a/style.css
+++ b/style.css
@@ -1,1 +1,28 @@
 /* Styles go here! */
+
+#sidebar {
+    height: 100%; /* 100% Full-height */
+    width: 0; /* 0 width - change this with JavaScript */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Stay on top */
+    top: 0;
+    left: 0;
+    overflow-x: hidden; /* Disable horizontal scroll */
+    background-color: rgba(17, 17, 17, 0.664); /* Black*/
+    padding-top: 60px; /* Place content 60px from the top */
+    transition: 0.5s; /* 0.5 second transition effect to slide in the sidebar */
+  }
+
+  .sidebar-text {
+      color: white;
+      font-family: cursive;
+      font-size: larger;
+  }
+
+  body {
+    background-color: cornsilk;
+    background-image: url("./images/flower-background-3.JPG");
+    background-size: cover;
+    transition: margin-left .5s; /* If you want a transition effect */
+    padding: 20px;
+  }
