--- a/style.css
+++ b/style.css
@@ -8,15 +8,16 @@
     top: 0;
     left: 0;
     overflow-x: hidden; /* Disable horizontal scroll */
-    background-color: rgba(17, 17, 17, 0.664); /* Black*/
-    padding-top: 60px; /* Place content 60px from the top */
+    background-color: rgba(255, 255, 255, 0.664); /* Black*/
+    padding-top: 20px; /* Place content 60px from the top */
     transition: 0.5s; /* 0.5 second transition effect to slide in the sidebar */
   }
 
   .sidebar-text {
-      color: white;
+      color: rgb(17, 17, 17);
       font-family: cursive;
       font-size: larger;
+      padding-left: 20px; 
   }
 
   body {
@@ -25,4 +26,14 @@
     background-size: cover;
     transition: margin-left .5s; /* If you want a transition effect */
     padding: 20px;
+  }
+
+  .image {
+    height: 60px;
+    width: 60px;
+
+  }
+
+  li {
+    list-style-type: none;
   }
