--- a/style.css
+++ b/style.css
@@ -2,17 +2,21 @@
 
 #sidebar {
     height: 100%; /* 100% Full-height */
-    width: 0; /* 0 width - change this with JavaScript */
-    position: fixed; /* Stay in place */
+    width: 0px; /* 0 width - change this with JavaScript */
+    position: absolute; /* Position them relative to the browser window */
     z-index: 1; /* Stay on top */
     top: 0;
     left: 0;
     overflow-x: hidden; /* Disable horizontal scroll */
     background-color: rgba(255, 255, 255, 0.664); /* Black*/
-    padding-top: 20px; /* Place content 60px from the top */
+    padding-top: 10px; /* Place content 20px from the top */
     transition: 0.5s; /* 0.5 second transition effect to slide in the sidebar */
   }
 
+  #sidebar a:hover {
+    left: 0; /* On mouse-over, make the elements appear as they should */
+  }
+  
   .sidebar-text {
       color: rgb(17, 17, 17);
       font-family: cursive;
