added sidebar hover, updated positioning, organized css, added divs to html and js

--- a/style.css
+++ b/style.css
@@ -1,23 +1,82 @@
 /* Styles go here! */
+@keyframes fadein{
+  0% { opacity:0; }
+  66% { opacity:0; }
+  100% { opacity:1; }
+}
+
+body {
+  background: radial-gradient(circle, rgba(246,199,219,1) 0%, rgba(148,187,233,1) 100%);
+  /* background-image: url("./images/flower-background-3.JPG"); */
+  background-size: cover;
+  transition: margin-left .5s; /* If you want a transition effect */
+  margin: 0;
+}
+
+
+/* Main content  */
+
+#main {
+  transition: 0.5s;
+  padding-top: 30px;
+}
+
+.sidebar-open #main {
+  margin-left: 200px;
+}
+
+.main-image {
+  height: 200px;
+  background-position: center;
+  background-size: contain; 
+}
+
+#flower-main {
+  height: 75vh;
+  text-align: left;
+  display: flex;
+  flex-flow: wrap;
+  margin: auto;
+  justify-content: center;
+ 
+}
+
+.content {
+  padding: 15px;
+}
+
+
+/* Sidebar view and hover */
 
 #sidebar {
     height: 100%; /* 100% Full-height */
-    width: 0px; /* 0 width - change this with JavaScript */
+    width: 25px; /* 0 width - change this with JavaScript */
     position: absolute; /* Position them relative to the browser window */
-    z-index: 1; /* Stay on top */
     top: 0;
     left: 0;
     overflow-x: hidden; /* Disable horizontal scroll */
     background-color: rgba(255, 255, 255, 0.664); /* Black*/
     padding-top: 10px; /* Place content 20px from the top */
     transition: 0.5s; /* 0.5 second transition effect to slide in the sidebar */
-    /* display: flex; */
-   
+    /* border-right: 1px solid #bbb; */  
   }
 
-  /* #sidebar a:hover {
-    left: 0; /* On mouse-over, make the elements appear as they should */
-  /* } */ 
+  .sidebar-content {
+    display: none;
+    visibility: hidden;
+    opacity: 0;
+    animation: 0.6s ease 0s normal forwards 1 fadein;
+  }
+
+  .sidebar-open #sidebar {
+    width: 200px;
+  }
+
+  .sidebar-open .sidebar-content {
+    display: block;
+    visibility: visible;
+    opacity: 1;
+  }
   
   .sidebar-text {
       color: rgb(17, 17, 17);
@@ -25,7 +84,6 @@
       font-size: larger;
       text-align: center; 
   }
-
 
   .card {
     text-align: center;
@@ -36,45 +94,26 @@
     
   }
 
-  body {
-    background-color: cornsilk;
-    /* background-image: url("./images/flower-background-3.JPG"); */
-    background-size: cover;
-    transition: margin-left .5s; /* If you want a transition effect */
-    padding: 30px;
-    display: grid;
-    grid-template-rows: 50% 50%;
-    
-    /* overflow: hidden;
-    overflow-y:auto; */
-    /* min-height: 100vh; */
-  }
-
-
   .side-image {
     height: 90px;
     background-position: center;
     background-size: contain; 
   }
 
-  .main-image {
-    height: 200px;
-    background-position: center;
-    background-size: contain; 
+
+  /* Bottom bar with selected flower images and save bouquet/view all buttons */
+
+  #bottom-bar {
+    position: absolute;
+    bottom: 15px;
+    left: 0;
+    width: 100%;
+    transition: 0.5s;
   }
 
-  #flower-main {
-    height: 75vh;
-    text-align: left;
-    display: flex;
-    flex-flow: wrap;
-    margin: auto;
-    justify-content: center;
-   
-  }
-
-  .content {
-    padding: 15px;
+  .sidebar-open #bottom-bar {
+    left: 200px;
+    width: calc(100% - 200px);
   }
 
   .bouquet-item-image {
@@ -93,6 +132,14 @@
     justify-content: center;
   }
 
+  #bouquet-buttons {
+    text-align: center;
+  }
+
+
+
+  /* Pop up save bouquet form */
+
   #modal {
     position: fixed;
     z-index: 1;
@@ -106,7 +153,6 @@
   
   #save-bouquet-form {
     background-color: rgb(255, 237, 194);
-    /* margin-top: 20vh; */
     width: 400px;
     margin: 20vh auto 0;
     padding: 40px;
@@ -116,9 +162,7 @@
   #form-content {
     text-align: center;
   }
-  #bouquet-buttons {
-    text-align: center;
-  }
+
 
 
  
