--- a/style.css
+++ b/style.css
@@ -168,6 +168,35 @@ body {
     padding-bottom: 6px;
   }
 
+
+/* View all bouquets */
+
+#bouquetModal {
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.75);
+}
+
+#bouquet-list {
+  background-color: rgb(255, 237, 194);
+  width: 400px;
+  height: 400px;
+  margin: 20vh auto 0;
+  padding: 20px;
+  border-radius: 20px;
+  text-align: center;
+  overflow-x: hidden;  
+}
+
+ul {
+  list-style: none;
+}
+
+
 /* massive amount of css for volume slider (sorry) */
 
 .sliderContainer {
@@ -190,7 +219,6 @@ input[type=range]::-webkit-slider-runnable-track {
   width: 100%;
   height: 2px;
   cursor: pointer;
-  animate: 0.2s;
   box-shadow: 1px 1px 10px #E3E4FF;
   background: #9BBA9E;
   border-radius: 10px;
@@ -217,7 +245,6 @@ input[type=range]::-moz-range-track {
   width: 100%;
   height: 2px;
   cursor: pointer;
-  animate: 0.2s;
   box-shadow: 1px 1px 10px #E3E4FF;
   background: #9BBA9E;
   border-radius: 10px;
@@ -238,7 +265,6 @@ input[type=range]::-ms-track {
   width: 100%;
   height: 2px;
   cursor: pointer;
-  animate: 0.2s;
   background: transparent;
   border-color: transparent;
   color: transparent;
